update gender selector overflow to prevent horizontal scrolls

--- a/working-assets/css/gender-selector.css
+++ b/working-assets/css/gender-selector.css
@@ -30,7 +30,7 @@
 
   .gender-wrapper {
     display: grid;
-    overflow-y: hidden;
+    overflow: hidden;
     place-items: center;
 
     &>div,
